# plimit

./: README.md  pyproject.toml
src/plimit/: __init__.py  _core.py
tests/: test_plimit.py
