[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
]

[project]
name = "plimit"
version = "1.0.0"
description = "Run multiple async functions with limited concurrency"
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [
    { name = "Akshat" },
]
keywords = ["async", "asyncio", "concurrency", "limit", "limiter", "rate", "throttle", "semaphore"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Framework :: AsyncIO",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Software Development :: Libraries",
    "Typing :: Typed",
]

[project.urls]
Homepage = "https://github.com/aks-71/plimit"
Repository = "https://github.com/aks-71/plimit"
Issues = "https://github.com/aks-71/plimit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/plimit"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
